Oppretter gosys oppgave hvis brev utsendelse feiler pga manglende adresse til bruker.