@@ -26,6 +26,8 @@ public class Behandling {
     private List<BehandlingÅrsak> behandlingÅrsaker;
     private String ansvarligSaksbehandler;
     private boolean toTrinnsBehandling;
+
+    private String behandlendeEnhetId;
     private String behandlendeEnhetNavn;
     private String ansvarligBeslutter;
     private FagsakBackend fagsakBackend;
@@ -154,6 +156,10 @@ public class Behandling {
         return endretAv;
     }
 
+    public String getBehandlendeEnhetId() {
+        return behandlendeEnhetId;
+    }
+
     public void leggtilFagsakBackend(FagsakBackend fagsak) {
         if (this.fagsakBackend == null) {
             this.fagsakBackend = fagsak;
@@ -173,10 +179,7 @@ public class Behandling {
     }
 
     public boolean erManueltOpprettet() {
-        return getBehandlingÅrsaker().stream()
-                .map(BehandlingÅrsak::getManueltOpprettet)
-                .collect(Collectors.toList())
-                .contains(true);
+        return getBehandlingÅrsaker().stream().map(BehandlingÅrsak::getManueltOpprettet).toList().contains(true);
     }
 
     public static Behandling.Builder builder() {
@@ -191,6 +194,11 @@ public class Behandling {
             this.kladd.resourceLinker = new ArrayList<>();
             this.kladd.formidlingRessurser = new ArrayList<>();
             this.kladd.behandlingÅrsaker = new ArrayList<>();
+        }
+
+        public Behandling.Builder medBehandlendeEnhetId(String behandlendeEnhetId) {
+            this.kladd.behandlendeEnhetId = behandlendeEnhetId;
+            return this;
         }
 
         public Behandling.Builder medBehandlendeEnhetNavn(String behandlendeEnhetNavn) {
